--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 before_install:
+    - yes | sdkmanager "platforms;android-28"
     - chmod +x ./gradlew
 android:
   components:
