--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
     - yes | sdkmanager "platforms;android-28"
     - chmod +x ./gradlew
 script:
-    ./gradlew build
+    ./gradlew assembleRelease
 android:
   components:
     # Uncomment the lines below if you want to
@@ -30,7 +30,7 @@ deploy:
   provider: releases 
   api_key:           
     secure: $GH_TOKEN
-  file: "main"       
+  file: app/build/outputs/apk/app-release.apk
   skip_cleanup: true 
   on:                
      branch: master   
