--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ android:
     - android-28.0.1
 
     # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
+    #- extra-google-google_play_services
+    #- extra-google-m2repository
+    #- extra-android-m2repository
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
