--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,20 @@ before_install:
     - yes | sdkmanager "platforms;android-28"
     - chmod +x ./gradlew
 script:
-    ./gradlew assembleRelease
+    - ls 
+    - ./gradlew assembleRelease
 android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    - tools
-    - platform-tools
+    #- tools
+    #- platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-28.0.1
+    #- build-tools-28.0.1
 
     # The SDK version used to compile your project
-    - android-28.0.1
+    #- android-28.0.1
 
     # Additional components
     #- extra-google-google_play_services
