--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,5 @@ deploy:
   file: app/release/app-release.apk
   skip_cleanup: true 
   on:                
-     branch: master   
+     branch: master
+     tags: true
